Funcionalidades Usuario implementadas

--- a/EcommerceEcoville/EcommerceEcoville.csproj
+++ b/EcommerceEcoville/EcommerceEcoville.csproj
@@ -19,4 +19,10 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Usuario\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
